--- a/slide_9.css
+++ b/slide_9.css
@@ -1,13 +1,15 @@
 .faq{
  border: 5px solid #16542e; 
- width: 600px;
  margin: auto;
- height: 435px;
+ padding-top: 20px;
+ padding-bottom: 20px;
 }
 
-h3{
+.h3{
   text-align: center;
   color: #16542e;
+  font-family: Graduate;
+  padding-top: 5px;
 }
 
 .dropbtn1{
@@ -18,7 +20,7 @@ h3{
   cursor: pointer;
   width: 98%;
   text-align: left;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-left: 5px;
   margin-right: 5px;
   padding: 15px;
@@ -32,7 +34,7 @@ h3{
   cursor: pointer;
   width: 98%;
   text-align: left;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-left: 5px;
   margin-right: 5px;
   padding: 15px;
@@ -46,7 +48,7 @@ h3{
   cursor: pointer;
   width: 98%;
   text-align: left;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-left: 5px;
   margin-right: 5px;
   padding: 15px;
@@ -60,7 +62,7 @@ h3{
   cursor: pointer;
   width: 98%;
   text-align: left;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-left: 5px;
   margin-right: 5px;
   padding: 15px;
