--- a/slide_5.css
+++ b/slide_5.css
@@ -1,1 +1,55 @@
+.lw { font-size: 60px; }
+.verification{
+  background: #16542e; 
+  text-align: left;
+  text-decoration-color: white;
+  margin:  auto;
+  padding:  10px;
+  width: 650px;
+}
 
+.verification p{
+  color: white;
+    font-size: 20px;
+  text-align: left;
+}
+
+.verification2 p{
+  color: white;
+   font-size:  20px;
+  text-align: left;
+ 
+}
+input.password2{
+  width:  600px;
+  height:  40px;
+}
+
+input.password1{
+  width:  600px;
+  height:  40px;
+}
+
+
+.users{
+  background-color:  #8ea484ff;
+  border: 1px solid white;
+  display:block;
+  margin-bottom:  10px;
+  margin-left:  auto;
+  margin-right:  auto;
+  padding:  10px;
+  text-align:  center;
+  width:  200px;
+}
+  
+  .redsquare {
+    background-color: #ff6347;
+    width: 300px;
+    height: 35px;
+  margin-top: 10px;
+    margin-bottom: px;
+    margin-left:  auto;
+    margin-right:  auto;
+  font-size: 15px;
+}
