--- a/menu_bar.css
+++ b/menu_bar.css
@@ -1,1 +1,11 @@
-
+.users{
+  background-color:  #8ea484ff;
+  border: 1px solid white;
+  display:block;
+  margin-bottom:  10px;
+  margin-left:  auto;
+  margin-right:  auto;
+  padding:  10px;
+  text-align:  center;
+  width:  200px;
+}
