--- a/menu_bar.css
+++ b/menu_bar.css
@@ -1,6 +1,5 @@
-.menu_btn{
+.users{
   background-color:  #ffa484ff;
-  border: 1px solid white;
   display:block;
   margin-bottom:  10px;
   padding:  10px;
