--- a/slide_1.css
+++ b/slide_1.css
@@ -1,25 +1,39 @@
 .welcomebox{
     background: #16542e;
     padding:  10px; 
-    width: 260px;
     text-align: center;
     text-decoration-color: white;
     margin:  auto;
+    margin-top: 10vh !important;
+    border-radius: 20px;
   }
   
   .welcomebox p{
+    margin-top: 1%;
     color: white;
     text-align: center;
   }
+
+  h1{
+    text-shadow: -1px 1px 0 white,
+                  1px 1px 0 white,
+                  1px -1px 0 white,
+                  -1px -1px 0 white; 
+  }
+  h2{
+    text-shadow: -1px 1px 0 white,
+                  1px 1px 0 white,
+                  1px -1px 0 white,
+                  -1px -1px 0 white; 
+  }
   
   .btn{
-    display:block;
     background-color:  #8ea484ff;
     border: 1px solid white;
-    /* padding:  10px;
-    width:  200px;
-    margin-bottom:  20px;
-    text-align:  center;
-    margin-left:  auto; */
-    margin-right:  auto;
+    padding:  10px;
+  }
+
+  .btn:hover{
+    background-color:white;
+    transition: 0.7s;
   }
