--- a/slide_2.css
+++ b/slide_2.css
@@ -31,7 +31,7 @@
     margin-top: 15px;
     width:  90px;
     cursor: pointer;
-    font-family: 'calibri';font-size: 15px;
+    font-size: 15px;
   }
   .users{
     display:block;
