--- a/slide_9.css
+++ b/slide_9.css
@@ -29,6 +29,7 @@
     background-color: #16542e;
     color: white;
     border:none;
+    box-shadow: none;
 }
 .faqBottom{
   border: 3px solid #16542e;
