--- a/slide_5.css
+++ b/slide_5.css
@@ -38,9 +38,10 @@ input.password1{
   margin-bottom:  10px;
   margin-left:  auto;
   margin-right:  auto;
+  margin-top: 20px;
   padding:  10px;
   text-align:  center;
-  width:  200px;
+  width:  300px;
 }
   
   .redsquare {
