--- a/slide_11.css
+++ b/slide_11.css
@@ -1,1 +1,37 @@
+.changepassbox{
+    background: #16542e;
+    padding:  10px; 
+    text-align: left;
+    color: white;
+    margin:  auto;
+    border-radius: 20px;
+    height: 420px;
+  }
 
+  .passboxtext{
+    text-align: left;
+    color: white;
+  }
+
+  .form-control{
+    width: 97%;
+    font-family: calibri;
+    font-size: 18px;
+  }
+
+  #submit{
+    display: block;
+    background-color: #8ea484ff;
+    border: 1px solid white;
+    padding:  5px;
+    width:  300px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom:  10px;
+    text-align:  center;
+    cursor: pointer;
+    font-family: 'Graduate';font-size: 15px;
+  }
+  #teacher-dropdown{
+    font-family: calibri;
+  }
