--- a/slide_3.css
+++ b/slide_3.css
@@ -1,33 +1,79 @@
-.lw { font-size: 60px; }
-.forgotpassword{
-  background: #16542e; 
-  text-align: center;
-  text-decoration-color: white;
-  margin:  auto;
-  padding:  10px;
-  width: 650px;
+h1{
+  font-family: graduate;
+  color: #eeeeee;
+  padding: 12px 10px 12px 10px;
+  text-align: left;
 }
-
-.forgotpassword p{
-  color: white;
-    font-size: 35px;
+h3{
+    color: #16542e;
+    text-align: center;
+}
+.title {
+    color: white;
+    font-size: 23px;
+    padding-top: 27.5px;
+    text-align: center;
+}
+.words {
+    color: white;
+    font-size: 100%;
+    padding: 5px;
+    text-align: center;
+}
+input[type=text]{
+  width: 398px;
+  border: 2px solid gray;
+}
+button {
+    background-color: #8ea484;
+    border: 2px solid #16542e;
+    display: block;
+    font: 20px Graduate;
+    margin-top: 30px;
+    padding: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-family: graduate;
+}
+.welcomebox{
+    background: #16542e;
+    padding:  10px; 
+    text-align: center;
+    text-decoration-color: white;
+    margin:  auto;
+    margin-top: 10vh !important;
+    border-radius: 20px;
+  }
+button:active{
+    background-color: #16542e;
+    border: 2px solid #8ea484;
+    color: white;
+}
+h5{
+  font-family: graduate;
+  color: eeeeee;
+  padding-top: 9px;
+}
+.col-sm-2{
+  padding-top: 6px;
   text-align: center;
 }
-
-.forgotpassword2 p{
-  color: white;
-   font-size:  14px;
-  text-align: center;
- 
+.col-sm-7{
+  text-align: right;
+  padding-top: 6px;
 }
-.users{
-  background-color:  #8ea484ff;
-  border: 1px solid white;
-  display:block;
-  margin-bottom:  20px;
-  margin-left:  auto;
-  margin-right:  auto;
-  padding:  10px;
-  text-align:  center;
-  width:  200px;
+.container-fluid{
+     background-color: #16542e;
+     height: 2.5rem;
+    position: fixed;
+     bottom: 0;
+} 
+ .container-fluid a{
+    color: #eeeeee;
+    font-family: graduate;
+    font-size: 18px;
+}
+.container-fluid a:hover{
+    background-color: #eeeeee;
+    color: #16542e;
 }
