--- a/slide_11.css
+++ b/slide_11.css
@@ -35,3 +35,139 @@
   #teacher-dropdown{
     font-family: calibri;
   }
+
+
+
+
+    :root {
+      --atholton-green: #16542eff;
+    }
+    
+    body {
+      font-family: 'Graduate';
+      font-size: 22px;
+    }
+
+    button {
+      font-family: Graduate;
+      font-size: 3vw;
+    }
+
+    .btn {
+      background-color: #8ea484ff;
+      color: black;
+      margin-bottom: 5%;
+    }
+
+    .btn-cancel {
+      background-color: transparent;
+      border: none;
+      color: white;
+    }
+
+    #pass-preview {
+      background: white;
+      margin: 3%;
+      margin-left: 15%;
+      margin-right: 15%;
+      padding-left: 5%;
+      padding-right: 5%;
+      padding-top: 1px;
+    }
+
+    .form-popup {
+      background-color: var(--atholton-green);
+      display: none;
+      height: 80%;
+      margin: auto;
+      outline: 5px dotted white;
+      position: auto;
+      width: 70%;
+      border-style: solid;
+      border-width: 20px;
+      border-color: var(--atholton-green);
+    }
+
+    h1 {
+      background: transparent;
+      color: white;
+      margin-top: 7%;
+      text-align: center;
+    }
+
+    h2 {
+      background: transparent;
+      color: white;
+      margin: 2%;
+      text-align: center;
+    }
+
+    h3 {
+      background: transparent;
+      color: white;
+      font-family: Calibri;
+      margin: 5%;
+      text-align: center;
+    }
+
+    h4 {
+      background: white;
+      color: #16542E;
+      font-weight: bold;
+      margin-top: 10%;
+      text-align: center;
+    }
+
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+      max-width: 100%;
+      height: auto;
+    }
+
+    option {
+      background: white;
+      font-family: Calibri;
+      font-size: 15px;
+    }
+
+    p {
+      background: white;
+      color: #16542E;
+      font-family: Calibri;
+    }
+
+    select {
+      background: white;
+      font-family: Calibri;
+      font-size: 18px;
+      margin-bottom: 2%;
+      margin-left: 25%;
+      padding: 3px;
+      width: 50%;
+    }
+
+    ul {
+      list-style-type: none;
+      background: white;
+    }
+
+    li {
+      background: white;
+
+    }
+
+    li span {
+      display: inline-block;
+      background: white;
+    }
+
+    #title {
+      margin-top: 8%;
+    }
+
+    #student {
+      font-family: Calibri;
+    }
