--- a/slide_6.css
+++ b/slide_6.css
@@ -151,7 +151,8 @@
 
     h4 {
       background: white;
-      color: #16542E;
+/*       color: #16542E; */
+      color: #0b03fc
       font-weight: bold;
       margin-top: 10%;
       text-align: center;
