--- a/slide_6.css
+++ b/slide_6.css
@@ -152,7 +152,7 @@
     h4 {
       background: white;
 /*       color: #16542E; */
-      color: #0b03fc
+      color: #fc9d03;
       font-weight: bold;
       margin-top: 10%;
       text-align: center;
