--- a/slide_3.css
+++ b/slide_3.css
@@ -56,6 +56,9 @@ h5{
   color: #eeeeee;
   padding-top: 9px;
 }
+.col-sm-3{
+  color: #eeeeee;
+}
 .col-sm-2{
   padding-top: 6px;
   text-align: center;
