--- a/slide_3.css
+++ b/slide_3.css
@@ -36,6 +36,7 @@ button {
     padding-left: 20px;
     padding-right: 20px;
     font-family: graduate;
+    text-decoration: none;
 }
 .welcomebox{
     background: #16542e;
