--- a/slide_3.css
+++ b/slide_3.css
@@ -53,11 +53,8 @@ button:active{
 }
 h5{
   font-family: graduate;
-  color: #eeeeee;
+  color: eeeeee;
   padding-top: 9px;
-}
-.col-sm-3{
-  color: #eeeeee;
 }
 .col-sm-2{
   padding-top: 6px;
