--- a/googleSignIn.css
+++ b/googleSignIn.css
@@ -1,8 +1,8 @@
 .h3{
   color: white;
-  font-family:Calibri;
+  font: 25px Calibri;
 }
 
-.g-signin2{
-  align: center;
+.signIn{
+  margin: auto;
 }  
