--- a/slide_1.css
+++ b/slide_1.css
@@ -50,3 +50,16 @@
     font-family: calibri;
     border-radius: 10px;
   }
+
+.nav-link{
+    background: #16542e;
+    padding: 5px;
+    text-align: center;
+    text-decoration-color: white;
+    margin:  auto;
+    margin-top: 0.5%;
+    font-size: 20px;
+    color: white;
+    font-family: calibri;
+    border-radius: 10px;
+  }
