--- a/header.css
+++ b/header.css
@@ -1,5 +1,5 @@
 .header-image {
-background-image: url(“cat.jpg”);
+background-image: url(“atholton_building_updated_color_crop2.jpg”);
 background-position: center;
 background-repeat: no-repeat;
 position: relative;
