--- a/header.css
+++ b/header.css
@@ -1,6 +1,6 @@
 .header {
   padding: 60px;
-
+  background-image: url('https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/atholton_building_updated_color_crop2.jpg');
   color: black;
   font-size: 30px;
 }
