--- a/slide_9.css
+++ b/slide_9.css
@@ -41,3 +41,13 @@
   padding-top:5px;
 }
 
+.faqBottom{
+  border: 3px solid #16542e;
+  font-family:Graduate;
+  font-size: 15px;
+  text-align:center;
+  margin-top:15px;
+  padding-top:5px;
+  padding-top:5px;
+}
+
