--- a/slide_1.css
+++ b/slide_1.css
@@ -19,12 +19,14 @@
                   1px 1px 0 white,
                   1px -1px 0 white,
                   -1px -1px 0 white; 
+      font-weight: 750 !important;
   }
   h2{
     text-shadow: -1px 1px 0 white,
                   1px 1px 0 white,
                   1px -1px 0 white,
                   -1px -1px 0 white; 
+      font-weight: 750 !important;
   }
   
   .btn{
