--- a/header.css
+++ b/header.css
@@ -1,13 +1,10 @@
-.header {
-  padding: 60px;
-  background-image: url('https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/atholton_building_updated_color_crop2.jpg');
-  color: black;
-  font-size: 30px;
-}
-
 .header-image {
 background-position: center;
 background-repeat: no-repeat;
 position: relative;
 background-size: cover;
+}
+
+.header-text{
+  color: black;
 }
