--- a/slide_9.css
+++ b/slide_9.css
@@ -44,7 +44,8 @@
 .faqHome{
   border: 3px solid #16542e;
   font-family:Graduate;
-  font-size: 15px;
+  color: white;
+  font-size: 25px;
   text-align:center;
   margin-top:15px;
   padding-top:5px;
